# Computer-Use-Agent

./: .gitignore  IMPLEMENTATION_TASKLIST.md  README.md  TEST_PROMPTS.md  agents.md  package.json  pyproject.toml  pyrightconfig.json
apps/desktop/: cursor.html  cursorMarker.html  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  cursorMarkerOverlay.css  cursorMarkerOverlay.tsx  cursorOverlay.css  cursorOverlay.tsx  index.css  overlay.css  overlay.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: cursor-marker.json  cursor-widget.json  default.json  widget.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: DebugTiming.tsx  HistoryPanel.tsx  McpSettingsPanel.tsx  ModelSelector.tsx  ScreenshotPanel.tsx  StepTimeline.tsx  TaskRunner.tsx
apps/desktop/src/lib/: paths.ts  types.ts  workerClient.ts
computeruse/: __init__.py  cli.py  config.py  mcp_server.py  worker.py
computeruse/agent/: __init__.py  history.py  loop.py  metrics.py  model_selector.py  ollama_client.py  perception.py  prompts.py  session.py
computeruse/schemas/: __init__.py  actions.py  elements.py  session.py
computeruse/tools/: __init__.py  dpi.py  executor.py  keyboard.py  mouse.py  screen.py  screenshot.py  window.py
