[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computeruse"
version = "0.1.0"
description = "Local desktop-use agent for Ollama vision models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "mss>=9.0.1",
  "Pillow>=10.0.0",
  "psutil>=5.9.0",
  "pydantic>=2.7.0",
  "pyautogui>=0.9.54",
  "pywinauto>=0.6.8",
  "pywinctl>=0.4.1",
  "rich>=13.7.0",
  "typer>=0.12.0"
]

[project.scripts]
computeruse = "computeruse.cli:app"
computeruse-mcp = "computeruse.mcp_server:main"

[tool.setuptools.packages.find]
include = ["computeruse*"]
