[package]
name = "computeruse-desktop"
version = "0.1.0"
description = "ComputerUse desktop app"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
